# cspot

./: .gitmodules
cspot/include/: AudioChunk.h  AudioChunkManager.h  CDNAudioFile.h  CSpotConfiguration.h  CSpotContext.h  ChunkedAudioStream.h  ConstantParameters.h  CryptoMbedTLS.h  DeviceStateHandler.h  EventManager.h  MercurySession.h  PlayerContext.h  Session.h  Task.h  TrackPlayer.h  TrackQueue.h  TrackReference.h  Utils.h
cspot/protobuf/: connect.options  connect.proto  mercury.options
cspot/src/: AudioChunk.cpp  AudioChunkManager.cpp  CDNAudioFile.cpp  CryptoMbedTLS.cpp  DeviceStateHandler.cpp  EventManager.cpp  LoginBlob.cpp  MercuryManager.cpp  MercurySession.cpp  PlainConnection.cpp  Player.cpp  PlayerContext.cpp  Session.cpp  ShannonConnection.cpp  TrackPlayer.cpp  TrackQueue.cpp  TrackReference.cpp  Utils.cpp
targets/cli/: CMakeLists.txt  CliPlayer.cpp  CliPlayer.h  main.cpp
targets/esp32/: CMakeLists.txt  sdkconfig.defaults
targets/esp32/components/VS1053/: CMakeLists.txt
targets/esp32/components/VS1053/include/: VS1053.h
targets/esp32/components/VS1053/src/: VS1053.cpp
targets/esp32/main/: CMakeLists.txt  ESPStatusLed.cpp  ESPStatusLed.h  EspPlayer.cpp  EspPlayer.h  Kconfig.projbuild  VSPlayer.cpp  VSPlayer.h  VSinit.h  main.cpp
targets/esp32/main/sinks/: AC101AudioSink.cpp  GenericI2SSink.cpp  GenericI2SSink.h
